--- a/templates/sprzedaz.html
+++ b/templates/sprzedaz.html
@@ -15,7 +15,7 @@
         <div class="col-sm-8">
             <h3 class="h2-titles-shadow">ETUI</h3>
             <hr>
-            <p style="text-align: justify">W naszej firmie znajdziecie całe mnóstwo akcesoriów do urządzeń mobilnych. W
+            <p class="p-par" style="text-align: justify">W naszej firmie znajdziecie całe mnóstwo akcesoriów do urządzeń mobilnych. W
                 swojej ofercie posiadamy duży wybór etui do smartfonów - zarówno do telefonów wiodących producentów, jak
                 i urządzeń mniej znanych marek.</p>
         </div>
@@ -26,7 +26,7 @@
         <div class="col-sm-8">
             <h3 class="h2-titles-shadow">OCHRONA EKRANU</h3>
             <hr>
-            <p style="text-align: justify">Dla dopełnienia ochrony urządzeń mobilnych poza etui do wyboru mamy ogrom
+            <p class="p-par" style="text-align: justify">Dla dopełnienia ochrony urządzeń mobilnych poza etui do wyboru mamy ogrom
                 ochron ekranu - od zwykłych folii ochronnych poprzez szkła hybrydowe będące połączeniem
                 twardości i wytrzymałości na zarysowania szkła, a posiadające giętkość folii. W oferie znajdują się
                 od podstawowych wariantów ochrony do szkieł premium zapewniających zabezpieczenie nawet najnowszych,
@@ -51,7 +51,7 @@
         <div class="col-sm-8">
             <h3 class="h2-titles-shadow">ŁADOWARKI / KABLE</h3>
             <hr>
-            <p style="text-align: justify">Uszkodziła Ci się ładowarka, a może kabel ładowarki odmówił posłuszeństwa?
+            <p class="p-par" style="text-align: justify">Uszkodziła Ci się ładowarka, a może kabel ładowarki odmówił posłuszeństwa?
                 Posiadamy na stanie ładowarki nawet do nieprodukowanych już od dawna telefonów - nie ważne czy to stara
                 Nokia, LG czy Sony
                 Ericsson, lub najnowszy smartfon Xiaomi bądź Samsung z funkcją szybkiego, bądź bezprzewodowego ładowania
@@ -64,7 +64,7 @@
         <div class="col-sm-8">
             <h3 class="h2-titles-shadow">INNE AKCESORIA</h3>
             <hr>
-            <p style="text-align: justify">Mamy także akcesoria dla zmotoryzowanych, czyli wszelkiego rodzaju ładowarki
+            <p class="p-par" style="text-align: justify">Mamy także akcesoria dla zmotoryzowanych, czyli wszelkiego rodzaju ładowarki
                 samochodowe, uchwyty do telefonów i tabletów, a także zestawy głośnomówiące oraz słuchawki bluetooth.
                 Poza tym w naszym sklepie znajdą państwo także karty pamięci, słuchawki do telefonów.</p>
         </div>
