--- a/templates/cennik-pozostale.html
+++ b/templates/cennik-pozostale.html
@@ -7,9 +7,9 @@
     <div class="row">
         <div class="col-sm-2"></div>
         <div class="col-sm-8">
-            <p>Nie znalazłeś swojego telefonu lub wyceny usterki?</p>
-            <p>Wyślij wiadomość z modelem i opisem usterki! Odpowiadamy błyskawicznie!</p>
-            <h5><a class="btn btn-outline-dark btn-lg animate__heartBeat" style="animation-delay: 3s"
+            <p class="p-par-contact">Nie znalazłeś swojego telefonu lub wyceny usterki?</p>
+            <p class="p-par-contact">Wyślij wiadomość z modelem i opisem usterki! Odpowiadamy błyskawicznie!</p>
+            <h5 class="p-par-contact"><a class="btn btn-outline-dark btn-lg animate__heartBeat" style="animation-delay: 3s"
                    href="mailto:kontakt@diphone.pl" class="tel-mail">Skontaktuj się z nami już teraz!</a></h5>
 
         </div>
