--- a/templates/cennik-samsung-j.html
+++ b/templates/cennik-samsung-j.html
@@ -20,7 +20,7 @@
             <h5 class="h5-titles-shadow">WYMIANA SZYBY</h5>
 
             <!--  MODAL -->
-            <div class="modal fade" id="wymianaSzyby" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel1"
+            <div class="modal fade p-par" id="wymianaSzyby" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel1"
                  aria-hidden="true">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
@@ -201,7 +201,7 @@
             <h5 class="h5-titles-shadow">WYMIANA WYŚWIETLACZA</h5>
 
             <!--  MODAL -->
-            <div class="modal fade" id="wymianaWyswietlacza" tabindex="-1" role="dialog"
+            <div class="modal fade p-par" id="wymianaWyswietlacza" tabindex="-1" role="dialog"
                  aria-labelledby="exampleModalLabel2"
                  aria-hidden="true">
                 <div class="modal-dialog" role="document">
@@ -382,7 +382,7 @@
             <h5 class="h5-titles-shadow">WYMIANA TYLNEJ KLAPKI</h5>
 
             <!--  MODAL -->
-            <div class="modal fade" id="wymianaTylnejKlapki" tabindex="-1" role="dialog"
+            <div class="modal fade p-par" id="wymianaTylnejKlapki" tabindex="-1" role="dialog"
                  aria-labelledby="exampleModalLabel3"
                  aria-hidden="true">
                 <div class="modal-dialog" role="document">
@@ -564,7 +564,7 @@
             <h5 class="h5-titles-shadow">WYMIANA BATERII</h5>
 
             <!--  MODAL -->
-            <div class="modal fade" id="wymianaBaterii" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel4"
+            <div class="modal fade p-par" id="wymianaBaterii" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel4"
                  aria-hidden="true">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
@@ -744,7 +744,7 @@
             <h5 class="h5-titles-shadow">WYMIANA PORTU ŁADOWANIA</h5>
 
             <!--  MODAL -->
-            <div class="modal fade" id="wymianaPortuLadowania" tabindex="-1" role="dialog"
+            <div class="modal fade p-par" id="wymianaPortuLadowania" tabindex="-1" role="dialog"
                  aria-labelledby="exampleModalLabel5"
                  aria-hidden="true">
                 <div class="modal-dialog" role="document">
@@ -926,7 +926,7 @@
             <h5 class="h5-titles-shadow">WYMIANA GŁOŚNIKA</h5>
 
             <!--  MODAL -->
-            <div class="modal fade" id="wymianaGlosnika" tabindex="-1" role="dialog"
+            <div class="modal fade p-par" id="wymianaGlosnika" tabindex="-1" role="dialog"
                  aria-labelledby="exampleModalLabel6"
                  aria-hidden="true">
                 <div class="modal-dialog" role="document">
@@ -1099,7 +1099,7 @@
 
     </div>
 
-    <h5><a class="btn btn-outline-dark btn-lg animate__heartBeat" style="animation-delay: 3s" href="/cennik-samsung">WSZYSTKIE
+    <h5 class="p-par-contact"><a class="btn btn-outline-dark btn-lg animate__heartBeat" style="animation-delay: 3s" href="/cennik-samsung">WSZYSTKIE
         SERIE</a></h5>
 
 </div>
