--- a/templates/cennik-samsung-z.html
+++ b/templates/cennik-samsung-z.html
@@ -20,7 +20,7 @@
             <h5 class="h5-titles-shadow">WYMIANA SZYBY</h5>
 
             <!--  MODAL -->
-            <div class="modal fade" id="wymianaSzyby" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel1"
+            <div class="modal fade p-par" id="wymianaSzyby" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel1"
                  aria-hidden="true">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
@@ -98,7 +98,7 @@
             <h5 class="h5-titles-shadow">WYMIANA WYŚWIETLACZA</h5>
 
             <!--  MODAL -->
-            <div class="modal fade" id="wymianaWyswietlacza" tabindex="-1" role="dialog"
+            <div class="modal fade p-par" id="wymianaWyswietlacza" tabindex="-1" role="dialog"
                  aria-labelledby="exampleModalLabel2"
                  aria-hidden="true">
                 <div class="modal-dialog" role="document">
@@ -176,7 +176,7 @@
             <h5 class="h5-titles-shadow">WYMIANA TYLNEJ KLAPKI</h5>
 
             <!--  MODAL -->
-            <div class="modal fade" id="wymianaTylnejKlapki" tabindex="-1" role="dialog"
+            <div class="modal fade p-par" id="wymianaTylnejKlapki" tabindex="-1" role="dialog"
                  aria-labelledby="exampleModalLabel3"
                  aria-hidden="true">
                 <div class="modal-dialog" role="document">
@@ -255,7 +255,7 @@
             <h5 class="h5-titles-shadow">WYMIANA BATERII</h5>
 
             <!--  MODAL -->
-            <div class="modal fade" id="wymianaBaterii" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel4"
+            <div class="modal fade p-par" id="wymianaBaterii" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel4"
                  aria-hidden="true">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
@@ -332,7 +332,7 @@
             <h5 class="h5-titles-shadow">WYMIANA PORTU ŁADOWANIA</h5>
 
             <!--  MODAL -->
-            <div class="modal fade" id="wymianaPortuLadowania" tabindex="-1" role="dialog"
+            <div class="modal fade p-par" id="wymianaPortuLadowania" tabindex="-1" role="dialog"
                  aria-labelledby="exampleModalLabel5"
                  aria-hidden="true">
                 <div class="modal-dialog" role="document">
@@ -411,7 +411,7 @@
             <h5 class="h5-titles-shadow">WYMIANA GŁOŚNIKA</h5>
 
             <!--  MODAL -->
-            <div class="modal fade" id="wymianaGlosnika" tabindex="-1" role="dialog"
+            <div class="modal fade p-par" id="wymianaGlosnika" tabindex="-1" role="dialog"
                  aria-labelledby="exampleModalLabel6"
                  aria-hidden="true">
                 <div class="modal-dialog" role="document">
@@ -481,7 +481,7 @@
 
     </div>
 
-    <h5><a class="btn btn-outline-dark btn-lg animate__heartBeat" style="animation-delay: 3s" href="/cennik-samsung">WSZYSTKIE
+    <h5 class="p-par-contact"><a class="btn btn-outline-dark btn-lg animate__heartBeat" style="animation-delay: 3s" href="/cennik-samsung">WSZYSTKIE
         SERIE</a></h5>
 
 </div>
