--- a/templates/cennik-samsung.html
+++ b/templates/cennik-samsung.html
@@ -7,33 +7,33 @@
     <div class="row">
 
         <div class="col-sm-2">
-            <p><a class="btn btn-outline-dark btn-sm" href="/s-seria-a">SERIA <strong>GALAXY A</strong></a></p>
+            <p class="p-par-contact"><a class="btn btn-outline-dark btn-sm" href="/s-seria-a">SERIA <strong>GALAXY A</strong></a></p>
         </div>
 
         <div class="col-sm-2">
-            <p><a class="btn btn-outline-dark btn-sm" href="/s-seria-j">SERIA <strong>GALAXY J</strong></a></p>
+            <p class="p-par-contact"><a class="btn btn-outline-dark btn-sm" href="/s-seria-j">SERIA <strong>GALAXY J</strong></a></p>
         </div>
 
         <div class="col-sm-2">
-            <p><a class="btn btn-outline-dark btn-sm" href="/s-seria-m">SERIA <strong>GALAXY M</strong></a></p>
+            <p class="p-par-contact"><a class="btn btn-outline-dark btn-sm" href="/s-seria-m">SERIA <strong>GALAXY M</strong></a></p>
         </div>
 
         <div class="col-sm-2">
-            <p><a class="btn btn-outline-dark btn-sm" href="/s-seria-s">SERIA <strong>GALAXY S</strong></a></p>
+            <p class="p-par-contact"><a class="btn btn-outline-dark btn-sm" href="/s-seria-s">SERIA <strong>GALAXY S</strong></a></p>
         </div>
 
         <div class="col-sm-2">
-            <p><a class="btn btn-outline-dark btn-sm" href="/s-seria-z">SERIA <strong>GALAXY Z</strong></a></p>
+            <p class="p-par-contact"><a class="btn btn-outline-dark btn-sm" href="/s-seria-z">SERIA <strong>GALAXY Z</strong></a></p>
         </div>
 
         <div class="col-sm-2">
-            <p><a class="btn btn-outline-dark btn-sm" href="/s-seria-note">SERIA <strong> NOTE</strong></a></p>
+            <p class="p-par-contact"><a class="btn btn-outline-dark btn-sm" href="/s-seria-note">SERIA <strong> NOTE</strong></a></p>
         </div>
 
     </div>
 
     <br>
-    <h5><a class="btn btn-outline-dark btn-lg animate__heartBeat" style="animation-delay: 2s" href="/cennik">INNE
+    <h5 class="p-par-contact"><a class="btn btn-outline-dark btn-lg animate__heartBeat" style="animation-delay: 2s" href="/cennik">INNE
         MARKI</a></h5>
 
 </div>
