--- a/templates/skup.html
+++ b/templates/skup.html
@@ -7,7 +7,7 @@
 
 <div class="container">
     <div class="row">
-        <p class="p-par">Chcesz sprzedać swój smartfon? Męczy Cię wystawianie ogłoszeń w internecie? Nie zwlekaj! Napisz do Nas!
+        <p class="p-par-contact">Chcesz sprzedać swój smartfon? Męczy Cię wystawianie ogłoszeń w internecie? Nie zwlekaj! Napisz do Nas!
             Zapewniamy fachową obsługę oraz bezpieczeństwo transakcji. Pieniądze otrzymasz od ręki!</p>
     </div>
 
