refill service page

--- a/templates/serwis.html
+++ b/templates/serwis.html
@@ -8,49 +8,49 @@
     <div class="row">
 
         <div class="col-sm-4">
+            <hr>
             <div class="row">
-                <p>A</p>
+                <p class="p-par" style="text-align: right">NAPRAWA OPROGRAMOWANIA</p>
             </div>
             <div class="row">
-                <p>A</p>
+                <p class="p-par" style="text-align: right">ŚCIĄGANIE SIMLOCKA</p>
             </div>
             <div class="row">
-                <p>A</p>
+                <p class="p-par" style="text-align: right">NAPRAWA ZASIĘGU</p>
             </div>
             <div class="row">
-                <p>A</p>
+                <p class="p-par" style="text-align: right">NIETYPOWY PRZYPADEK</p>
             </div>
             <div class="row">
-                <p>A</p>
+                <p class="p-par" style="text-align: right">PROFESJONALNY SERWIS NAPRAWCZY</p>
             </div>
-            <div class="row">
-                <p>A</p>
-            </div>
-        </div>
-
-        <div class="col-sm-4">
-
+            <hr>
         </div>
 
         <div class="col-sm-4">
             <div class="row">
-                <p>A</p>
+                <img src="static/images/service/smartphones.png" style="width: 500px">
+            </div>
+        </div>
+
+        <div class="col-sm-4">
+            <hr>
+            <div class="row">
+                <p class="p-par" style="text-align: left">WYMIANA ELEMENTÓW AUDIO</p>
             </div>
             <div class="row">
-                <p>A</p>
+                <p class="p-par" style="text-align: left">WYMIANA WYŚWIETLACZA</p>
             </div>
             <div class="row">
-                <p>A</p>
+                <p class="p-par" style="text-align: left">WYMIANA PANELU DOTYKOWEGO</p>
             </div>
             <div class="row">
-                <p>A</p>
+                <p class="p-par" style="text-align: left">NAPRAWA PO ZALANIU</p>
             </div>
             <div class="row">
-                <p>A</p>
+                <p class="p-par" style="text-align: left">NAPRAWA PO UPADKU</p>
             </div>
-            <div class="row">
-                <p>A</p>
-            </div>
+            <hr>
         </div>
     </div>
 
