refill servie page

--- a/templates/serwis.html
+++ b/templates/serwis.html
@@ -9,23 +9,171 @@
 
         <div class="col-sm-4">
             <hr>
+
+            <!-- NAPRAWA OPROGRAMOWANIA -->
             <div class="row">
-                <p class="p-par" style="text-align: right">NAPRAWA OPROGRAMOWANIA</p>
+                <p type="button" class="p-par-service" style="text-align: right" data-toggle="modal"
+                   data-target="#naprawaOprogramowania">NAPRAWA OPROGRAMOWANIA</p>
+                <div class="modal fade p-par" id="naprawaOprogramowania" tabindex="-1" role="dialog"
+                     aria-labelledby="exampleModalLabel1"
+                     aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="h5-titles-shadow modal-title" id="exampleModalLabel1">NAPRAWA
+                                    OPROGRAMOWANIA</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <p><img src="static/images/service/check.png" style="height: 20px"> Naprawa
+                                    oprogramowania, softu, aktualizacja zablokowanego telefonu</p>
+                                <p><img src="static/images/service/check.png" style="height: 20px"> Odblokowanie konta
+                                    Google</p>
+                                <p><img src="static/images/service/check.png" style="height: 20px"> Rootowanie softu,
+                                    Upgrade i downgrade systemu operacyjnego</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-sm btn-dark" data-dismiss="modal">ZAMKNIJ</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
+
+            <!-- ŚCIĄGANIE SIMLOCKA -->
             <div class="row">
-                <p class="p-par" style="text-align: right">ŚCIĄGANIE SIMLOCKA</p>
+                <p type="button" class="p-par-service" style="text-align: right" data-toggle="modal"
+                   data-target="#sciaganieSimlocka">ŚCIĄGANIE SIMLOCKA</p>
+                <div class="modal fade p-par" id="sciaganieSimlocka" tabindex="-1" role="dialog"
+                     aria-labelledby="exampleModalLabel2"
+                     aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="h5-titles-shadow modal-title" id="exampleModalLabel2">ŚCIĄGANIE SIMLOCKA</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <p><img src="static/images/service/check.png" style="height: 20px"> Odblokowanie kodu
+                                    simlock</p>
+                                <p><img src="static/images/service/check.png" style="height: 20px"> Odblokowanie kodu
+                                    sieci</p>
+                                <p><img src="static/images/service/check.png" style="height: 20px"> Odblokowanie blokady
+                                    operatora</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-sm btn-dark" data-dismiss="modal">ZAMKNIJ</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
+
+            <!-- NAPRAWA ZASIĘGU -->
             <div class="row">
-                <p class="p-par" style="text-align: right">NAPRAWA ZASIĘGU</p>
+                <p type="button" class="p-par-service" style="text-align: right" data-toggle="modal"
+                   data-target="#naprawaZasiegu">NAPRAWA ZASIĘGU</p>
+                <div class="modal fade p-par" id="naprawaZasiegu" tabindex="-1" role="dialog"
+                     aria-labelledby="exampleModalLabel3"
+                     aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="h5-titles-shadow modal-title" id="exampleModalLabel3">NAPRAWA ZASIĘGU</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <p><img src="static/images/service/check.png" style="height: 20px"> Naprawa zasięgu GSM
+                                    oraz WiFi</p>
+                                <p><img src="static/images/service/check.png" style="height: 20px"> Naprawa problemu z
+                                    zasięgiem</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-sm btn-dark" data-dismiss="modal">ZAMKNIJ</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
+
+            <!-- NIETYPOWY PRZYPADEK -->
             <div class="row">
-                <p class="p-par" style="text-align: right">NIETYPOWY PRZYPADEK</p>
+                <p type="button" class="p-par-service" style="text-align: right" data-toggle="modal"
+                   data-target="#nietypowyPrzypadek">NIETYPOWY PRZYPADEK</p>
+                <div class="modal fade p-par" id="nietypowyPrzypadek" tabindex="-1" role="dialog"
+                     aria-labelledby="exampleModalLabel4"
+                     aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="h5-titles-shadow modal-title" id="exampleModalLabel4">NIETYPOWY
+                                    PRZYPADEK</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <p><img src="static/images/service/check.png" style="height: 20px"> Nietypowy przypadek
+                                    usterki to dla nas wyzwanie!</p>
+                                <p><img src="static/images/service/check.png" style="height: 20px"> Staramy się
+                                    rozwiązać każdy problem!</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-sm btn-dark" data-dismiss="modal">ZAMKNIJ</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
+
+            <!-- PROFESJONALNY SERWIS NAPRAWCZY-->
             <div class="row">
-                <p class="p-par" style="text-align: right">PROFESJONALNY SERWIS NAPRAWCZY</p>
+                <p type="button" class="p-par-service" style="text-align: right" data-toggle="modal"
+                   data-target="#profesjonalnySerwisNaprawczy">PROFESJONALNY SERWIS NAPRAWCZY</p>
+                <div class="modal fade p-par" id="profesjonalnySerwisNaprawczy" tabindex="-1" role="dialog"
+                     aria-labelledby="exampleModalLabel5"
+                     aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="h5-titles-shadow modal-title" id="exampleModalLabel5">PROFESJONALNY SERWIS
+                                    NAPRAWCZY</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <p><img src="static/images/service/check.png" style="height: 20px"> Najwyższa jakość
+                                    usług!</p>
+                                <p><img src="static/images/service/check.png" style="height: 20px"> Dla nas nie ma
+                                    rzeczy niemożliwych!</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-sm btn-dark" data-dismiss="modal">ZAMKNIJ</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
             <hr>
         </div>
+
 
         <div class="col-sm-4">
             <div class="row">
