refill page service

--- a/templates/serwis.html
+++ b/templates/serwis.html
@@ -183,21 +183,167 @@
 
         <div class="col-sm-4">
             <hr>
+
+            <!-- WYMIANA ELEMENTÓW AUDIO -->
             <div class="row">
-                <p class="p-par" style="text-align: left">WYMIANA ELEMENTÓW AUDIO</p>
+                <p type="button" class="p-par-service" style="text-align: left" data-toggle="modal"
+                   data-target="#wymianaElementowAudio">WYMIANA ELEMENTÓW AUDIO</p>
+                <div class="modal fade p-par" id="wymianaElementowAudio" tabindex="-1" role="dialog"
+                     aria-labelledby="exampleModalLabel6"
+                     aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="h5-titles-shadow modal-title" id="exampleModalLabel6">WYMIANA ELEMENTÓW
+                                    AUDIO</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <p><img src="static/images/service/check.png" style="height: 20px"> Wymiana mikrofonu
+                                </p>
+                                <p><img src="static/images/service/check.png" style="height: 20px"> Wymiana głośnika</p>
+                                <p><img src="static/images/service/check.png" style="height: 20px"> Wymiana buzzera</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-sm btn-dark" data-dismiss="modal">ZAMKNIJ</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
+
+            <!-- WYMIANA WYŚWIETLACZA -->
             <div class="row">
-                <p class="p-par" style="text-align: left">WYMIANA WYŚWIETLACZA</p>
+                <p type="button" class="p-par-service" style="text-align: left" data-toggle="modal"
+                   data-target="#wymianaWyswietlacza">WYMIANA WYŚWIETLACZA</p>
+                <div class="modal fade p-par" id="wymianaWyswietlacza" tabindex="-1" role="dialog"
+                     aria-labelledby="exampleModalLabel7"
+                     aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="h5-titles-shadow modal-title" id="exampleModalLabel7">WYMIANA
+                                    WYŚWIETLACZA</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <p><img src="static/images/service/check.png" style="height: 20px"> Wymiana wyświetlacza
+                                </p>
+                                <p><img src="static/images/service/check.png" style="height: 20px"> Wymiana zbitej
+                                    szybki</p>
+                                <p><img src="static/images/service/check.png" style="height: 20px"> Zabezpieczenie
+                                    ekranu szkłem hartowanym / folią ochronną</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-sm btn-dark" data-dismiss="modal">ZAMKNIJ</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
+
+            <!-- WYMIANA PANELU DOTYKOWEGO -->
             <div class="row">
-                <p class="p-par" style="text-align: left">WYMIANA PANELU DOTYKOWEGO</p>
+                <p type="button" class="p-par-service" style="text-align: left" data-toggle="modal"
+                   data-target="#wymianaPaneluDotykowego">WYMIANA PANELU DOTYKOWEGO</p>
+                <div class="modal fade p-par" id="wymianaPaneluDotykowego" tabindex="-1" role="dialog"
+                     aria-labelledby="exampleModalLabel8"
+                     aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="h5-titles-shadow modal-title" id="exampleModalLabel8">WYMIANA
+                                    PANELU DOTYKOWEGO</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <p><img src="static/images/service/check.png" style="height: 20px"> Wymiana panelu
+                                    dotykowego</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-sm btn-dark" data-dismiss="modal">ZAMKNIJ</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
+
+            <!-- NAPRAWA PO ZALANIU -->
             <div class="row">
-                <p class="p-par" style="text-align: left">NAPRAWA PO ZALANIU</p>
+                <p type="button" class="p-par-service" style="text-align: left" data-toggle="modal"
+                   data-target="#naprawaPoZalaniu">NAPRAWA PO ZALANIU</p>
+                <div class="modal fade p-par" id="naprawaPoZalaniu" tabindex="-1" role="dialog"
+                     aria-labelledby="exampleModalLabel9"
+                     aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="h5-titles-shadow modal-title" id="exampleModalLabel9">NAPRAWA PO ZALANIU</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <p><img src="static/images/service/check.png" style="height: 20px"> Naprawa po zalaniu
+                                    cieczą</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-sm btn-dark" data-dismiss="modal">ZAMKNIJ</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
+
+            <!-- NAPRAWA PO UPADKU -->
             <div class="row">
-                <p class="p-par" style="text-align: left">NAPRAWA PO UPADKU</p>
+                <p type="button" class="p-par-service" style="text-align: left" data-toggle="modal"
+                   data-target="#naprawaPoUpadku">NAPRAWA PO UPADKU</p>
+                <div class="modal fade p-par" id="naprawaPoUpadku" tabindex="-1" role="dialog"
+                     aria-labelledby="exampleModalLabel10"
+                     aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="h5-titles-shadow modal-title" id="exampleModalLabel10">NAPRAWA PO UPADKU</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <p><img src="static/images/service/check.png" style="height: 20px"> Naprawa po upadku
+                                    cieczą</p>
+                                <p><img src="static/images/service/check.png" style="height: 20px"> Wymiana zbitej
+                                    szybki</p>
+                                <p><img src="static/images/service/check.png" style="height: 20px"> Wymiana zbitego
+                                    wyświetlacza</p>
+                                <p><img src="static/images/service/check.png" style="height: 20px"> Wymiana pękniętej
+                                    obudowy</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-sm btn-dark" data-dismiss="modal">ZAMKNIJ</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
+
             <hr>
         </div>
     </div>
