--- a/templates/serwis.html
+++ b/templates/serwis.html
@@ -176,6 +176,8 @@
 
 
         <div class="col-sm-4">
+            <br><br>
+            <!-- PHONES IMAGE -->
             <div class="row">
                 <img src="static/images/service/smartphones.png" style="width: 500px">
             </div>
@@ -325,8 +327,6 @@
                                 </button>
                             </div>
                             <div class="modal-body">
-                                <p><img src="static/images/service/check.png" style="height: 20px"> Naprawa po upadku
-                                    cieczą</p>
                                 <p><img src="static/images/service/check.png" style="height: 20px"> Wymiana zbitej
                                     szybki</p>
                                 <p><img src="static/images/service/check.png" style="height: 20px"> Wymiana zbitego
