--- a/templates/serwis.html
+++ b/templates/serwis.html
@@ -176,7 +176,7 @@
 
 
         <div class="col-sm-4">
-            <br><br>
+            <br>
             <!-- PHONES IMAGE -->
             <div class="row">
                 <img src="static/images/service/smartphones.png" style="width: 500px">
@@ -358,5 +358,28 @@
     <br>
     <br>
 </footer>
+
+<!-- LOGOS -->
+
+<div>
+    <img class="animate__animated animate__zoomIn" src="/static/images/main_page/logo/huawei.png"
+         style="height: 50px; padding: 5px; animation-delay: 100ms">
+    <img class="animate__animated animate__zoomIn" src="/static/images/main_page/logo/samsung.png"
+         style="height: 50px; padding: 5px; animation-delay: 500ms">
+    <img class="animate__animated animate__zoomIn" src="/static/images/main_page/logo/apple.png"
+         style="height: 50px; padding: 5px; animation-delay: 1000ms">
+    <img class="animate__animated animate__zoomIn" src="/static/images/main_page/logo/xiaomi.png"
+         style="height: 50px; padding: 5px; animation-delay: 1500ms">
+    <img class="animate__animated animate__zoomIn" src="/static/images/main_page/logo/sony.png"
+         style="height: 50px; padding: 5px; animation-delay: 2000ms">
+    <img class="animate__animated animate__zoomIn" src="/static/images/main_page/logo/lg.png"
+         style="height: 50px; padding: 5px; animation-delay: 2500ms">
+    <img class="animate__animated animate__zoomIn" src="/static/images/main_page/logo/lenovo.png"
+         style="height: 50px; padding: 5px; animation-delay: 3000ms">
+    <img class="animate__animated animate__zoomIn" src="/static/images/main_page/logo/hp.png"
+         style="height: 50px; padding: 5px; animation-delay: 3500ms">
+
+</div>
+<br>
 
 {% endblock %}
