--- a/templates/o_nas.html
+++ b/templates/o_nas.html
@@ -7,7 +7,7 @@
 <div class="container-fluid text-center">
     <div class="row">
         <div class="col-md-2"></div>
-        <div class="col-md-4 animate__animated animate__bounceInLeft" style="animation-delay: 1s">
+        <div class="col-md-4 animate__animated animate__rubberBand" style="animation-delay: 1s">
             <img class="img-fluid" src="/static/images/about_us/man.png">
         </div>
         <div class="col-md-4">
@@ -26,7 +26,7 @@
                 akcesoria do Twojego telefonu!
             </p>
             <p class="p-par" style="text-align: right">Zapraszamy serdecznie</p>
-            <p class="p-signature" style="text-align: right; margin-top: -30px">Zespól diphone</p>
+            <p class="p-signature" style="text-align: right; margin-top: -30px">Zespól DiPHONE</p>
         </div>
         <div class="col-md-2"></div>
     </div>
